force-app/main/default/objects/Inventory_Status_Update__e/Inventory_Status_Update__e.object-meta.xml
<CustomObject>
    <description>Fired by InventoryCheckCallback REST endpoint when MuleSoft posts a Slack-driven warehouse decision. The trigger consumes the event and updates the Order. Indirection avoids granting Site guest user direct write access to Order.</description>
    <label>Inventory Status Update</label>
    <pluralLabel>Inventory Status Updates</pluralLabel>
</CustomObject>