force-app/main/default/objects/Inventory_Status_Update__e/fields/Confirmed_By__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_By__c</fullName>
    <description>Slack user (display name or username) who clicked the button.</description>
    <label>Confirmed By</label>
    <length>120</length>
    <type>Text</type>
</CustomField>