force-app/main/default/objects/Inventory_Status_Update__e/fields/New_Status__c.field-meta.xml
<CustomField>
    <fullName>New_Status__c</fullName>
    <description>The new Inventory_Status__c value to set on the Order. Expected: "In Stock" or "Out of Stock".</description>
    <label>New Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>