force-app/main/default/objects/Inventory_Status_Update__e/fields/Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Id__c</fullName>
    <description>Salesforce Order Id (15 or 18 char) the warehouse acted on.</description>
    <label>Order Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>